cmake_minimum_required(VERSION 3.7)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 11)

add_executable(main main.cpp)
add_executable(remove-dupulicates remove-dupulicates.cpp)
add_executable(rotate rotate.cpp)
add_executable(Contains-duplicate Contains-duplicate.cpp)
add_executable(Single-number Single-number.cpp)
add_executable(Intersect Intersect.cpp)
add_executable(Plus-One Plus-One.cpp)
add_executable(FizzBuzz FizzBuzz.cpp)
add_executable(merge merge.cpp)
add_executable(FirstBadVersion FirstBadVersion.cpp)
add_executable(MaxDepth MaxDepth.cpp)
add_executable(DeleteNode DeleteNode.c)
add_executable(Two-Sum Two-Sum.cpp)
add_executable(ReverseInt ReverseInt.c)
add_executable(RomanToInt RomanToInt.cpp)
add_executable(Valid_Parentheses Valid_Parentheses.cpp)
add_executable(numJewelsInStones numJewelsInStones.cpp)
add_executable(MergeTwoLists MergeTwoLists.c)
add_executable(GenerateParenthesis RemoveElements.c)
add_executable(SearchInsert SearchInsert.c)
add_executable(PascalTriangle PascalTriangle.cpp)